# codenames

./: main.ipynb  main.py  preprocess.py  pyproject.toml  visualize.py
data/processed/: top10000german.csv  top100german.csv
data/raw/: top10000german.txt  top100german.txt  top8000german.txt
